# troubleshooting-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  config.yaml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_knowledge_docs.py
app/: config.py  main.py
app/agent/: core.py  intent.py  llm.py  planner.py  verifier.py
app/cases/: __init__.py  candidate.py  case_repo.py  schema.py
app/knowledge/: __init__.py  embedder.py  export_cases.py  ingest.py  keyword_store.py  reranker.py  retriever.py  vector_store.py
app/mcp/: adapter.py  client.py  server.py
app/mock_data/: cameras.json  heartbeat.json  kafka.json  logs.json  metrics.json  runbook.json
app/observability/: __init__.py  logging.py
app/persistence/: __init__.py  db.py  models.py  trace_repo.py
app/tools/: registry.py
app/web/: server.py
config/: base.yaml  dev.yaml  prod.yaml
docker/grafana/provisioning/dashboards/: dashboards.yaml
docker/loki/: loki-config.yaml
docker/otel/: otel-collector.yaml
docker/postgres/init/: 01_init.sql
docker/prometheus/: prometheus.yml
scripts/: pull_models.ps1  up.ps1  up.sh
tests/: test_agent_loop.py  test_cases_schema.py  test_config.py  test_knowledge.py  test_mcp.py  test_planner.py  test_reflow.py  test_tools.py  test_verify_replan.py
